# THAI_OCR

./: README.md  db.sqlite3  manage.py  pyproject.toml  railway.json
THAI_OCR/: asgi.py  settings.py  urls.py  wsgi.py
id_img/: apps.py  models.py  serializers.py  urls.py  views.py
id_img/img_processing/: main.py  temp.py  utils.py
id_img/migrations/: 0001_initial.py  0002_remove_mymodel_creation_date_remove_mymodel_creator_and_more.py  0003_ocrrecord_delete_mymodel.py  0004_alter_ocrrecord_id.py  0005_mymodel.py  0006_remove_ocrrecord_image_url.py
